--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -597,104 +597,104 @@ Try again or call customer service for more options."</string>
     <string name="contactScreen">Add/Edit SIM Contact</string>
     <string name="exportContactScreen">Export phone contacts to sim</string>
     <string name="addSimEntries">Add SIM Contact</string>
-    <string name="deleteAllSimEntries">Delete All SIM Contacts</string>
-    <string name="deleteSimContacts">Deleting SIM contacts</string>
-    <string name="editContact">Edit</string>
-    <string name="sendSms">Send SMS</string>
-    <string name="delete">Delete</string>
-    <string name="dial">Dial</string>
-    <string name="enterName">Enter Name:</string>
-    <string name="enterNumber">Enter Phone Number:</string>
-    <string name="contactAddSuccess">Succesfully added contact to SIM</string>
-    <string name="contactAddFailed">Failed to add contact to SIM !!!</string>
-    <string name="contactUpdateSuccess">Succesfully updated contact in SIM</string>
-    <string name="contactUpdateFailed">Failed to update contact in SIM !!!</string>
-    <string name="contactdeleteSuccess">Succesfully deleted contact from SIM</string>
-    <string name="contactdeleteFailed">Failed to delete contact from SIM !!!</string>
-    <string name="allContactdeleteSuccess">Succesfully deleted all contacts from SIM</string>
-    <string name="allContactdeleteFailed">Failed to delete all contacts from SIM !!!</string>
-    <string name="exportAllcontatsSuccess">Succesfully exported all contacts to SIM</string>
-    <string name="exportAllcontatsFailed">Failed to export all contacts to SIM !!!</string>
-    <string name="exportAllcontatsNoContacts">No Contacts found to export to SIM !!!</string>
-    <string name="cursorError">Cursor is not having proper data !!!</string>
-    <string name="alertdialogtitle">Result…</string>
-    <string name="name_hint_text">Name.</string>
-    <string name="phone_number_hint_text">Phone Number.</string>
-    <string name="sim_contact_name">Name</string>
-    <string name="sim_contact_number">Number</string>
-    <string name="pin2_invalid_or_name_is_too_long">You entered an invalid PIN or the name you entered is too long</string>
-    <string name="voice_privacy">Voice privacy</string>
-    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
-    <string name="back">Back</string>
-    <string name="add">Add</string>
-    <string name="undefined">Undefined</string>
-    <string name="remove">Delete</string>
-    <string name="telocation_setting">Location settings</string>
-    <string name="telocation_show_settings">Display settings</string>
-    <string name="telocation_enable_title">Show location</string>
-    <string name="telocation_custom_location_title">My locations</string>
+    <string name="deleteAllSimEntries">Cancella TUTTI i contatti dalla SIM</string>
+    <string name="deleteSimContacts">Cancellazione contatti dalla SIM</string>
+    <string name="editContact">Modifica</string>
+    <string name="sendSms">Invia SMS</string>
+    <string name="delete">Elimina</string>
+    <string name="dial">Componi</string>
+    <string name="enterName">Inserire il nome:</string>
+    <string name="enterNumber">Inserire il numero di telefono:</string>
+    <string name="contactAddSuccess">Aggiunta del contatto nella SIM eseguita</string>
+    <string name="contactAddFailed">Aggiunta del contatto nella SIM fallita !!!</string>
+    <string name="contactUpdateSuccess">Aggiornamento del contatto nella SIM eseguito</string>
+    <string name="contactUpdateFailed">Aggiornamento del contatto nella SIM fallito !!!</string>
+    <string name="contactdeleteSuccess">Cancellazione dalla SIM del contatto eseguita</string>
+    <string name="contactdeleteFailed">Cancellazione dalla SIM del contatto fallita !!!</string>
+    <string name="allContactdeleteSuccess">Cancellazione dalla SIM di tutti i contatti eseguita</string>
+    <string name="allContactdeleteFailed">Cancellazione dalla SIM di tutti i contatti fallita !!!</string>
+    <string name="exportAllcontatsSuccess">Esportazione nella SIM di tutti i contatti eseguita</string>
+    <string name="exportAllcontatsFailed">Impossibile esportare nella SIM tutti i contatti !!!</string>
+    <string name="exportAllcontatsNoContacts">Nessun contatto trovato per esportarlo nella SIM !!!</string>
+    <string name="cursorError">Il cursore non è in grado di trovare dati validi !!!</string>
+    <string name="alertdialogtitle">Risultati…</string>
+    <string name="name_hint_text">Nome.</string>
+    <string name="phone_number_hint_text">Numero di telefono.</string>
+    <string name="sim_contact_name">Nome</string>
+    <string name="sim_contact_number">Numero</string>
+    <string name="pin2_invalid_or_name_is_too_long">Hai inserito un PIN non valido o il nome immesso è troppo lungo</string>
+    <string name="voice_privacy">Privacy voce</string>
+    <string name="voice_privacy_summary">Abilità modalità privacy avanzata</string>
+    <string name="back">Indietro</string>
+    <string name="add">Aggiungi</string>
+    <string name="undefined">Non definita</string>
+    <string name="remove">Elimina</string>
+    <string name="telocation_setting">Impostazioni località</string>
+    <string name="telocation_show_settings">Impostazioni visualizzazione</string>
+    <string name="telocation_enable_title">Mostra località</string>
+    <string name="telocation_custom_location_title">Le mie località</string>
     <string name="telocation_custom_location_summary">Manage saved area codes and group numbers</string>
-    <string name="telocation_call_assistant">Dialing assistant</string>
-    <string name="telocation_contacts_countrycode">Default country code</string>
-    <string name="telocation_contacts_countrycode_hint">Enter country code</string>
-    <string name="telocation_contacts_countrycode_summary">Default country code for your contacts: %s</string>
-    <string name="telocation_auto_country_code">Add country code</string>
-    <string name="telocation_auto_country_code_summary">Automatically add country code before dialing contacts</string>
-    <string name="telocation_countrycode_alert_message_warning">The country code you entered may be incorrect.</string>
-    <string name="telocation_countrycode_alert_title">Alert</string>
-    <string name="telocation_countrycode_alert_message_wrong">The country code you entered is incorrect.</string>
-    <string name="telocation_custom_empty">Add a number by touching the add (+) button</string>
-    <string name="telocation_edit_custom_location_title">Configure location</string>
+    <string name="telocation_call_assistant">Assistente alla composizione</string>
+    <string name="telocation_contacts_countrycode">Prefisso internazionale predefinito</string>
+    <string name="telocation_contacts_countrycode_hint">Inserisci il prefisso internazionale</string>
+    <string name="telocation_contacts_countrycode_summary">Prefisso internazionale predefinito dei tuoi contatti: %s</string>
+    <string name="telocation_auto_country_code">Aggiunta prefisso internazionale</string>
+    <string name="telocation_auto_country_code_summary">Aggiungi sempre il prefisso internazionale ai numeri che chiami</string>
+    <string name="telocation_countrycode_alert_message_warning">Il prefisso internazionale immesso potrebbe non essere valido.</string>
+    <string name="telocation_countrycode_alert_title">Attenzione</string>
+    <string name="telocation_countrycode_alert_message_wrong">Il prefisso internazionale immesso non è valido.</string>
+    <string name="telocation_custom_empty">Aggiungi un numero toccando il pulsante +</string>
+    <string name="telocation_edit_custom_location_title">Configura località</string>
     <string name="telocation_custom_number_hint">Area code or group number</string>
-    <string name="telocation_custom_name_hint">Name</string>
-    <string name="telocation_number_type">Number type</string>
+    <string name="telocation_custom_name_hint">Numero</string>
+    <string name="telocation_number_type">Tipologia numero</string>
     <string name="telocation_number_type_jituan">Group number</string>
-    <string name="telocation_number_type_mob">Mobile phone</string>
-    <string name="telocation_number_type_tel">Landline</string>
-    <string name="telocation_countrycode_alert_message">Enter phone number without country code</string>
-    <string name="telocation_confim_delete_title">Delete this message?</string>
-    <string name="telocation_error_message_number">%s only supports numbers</string>
-    <string name="telocation_jituan_error_message_number">%s only supports numbers and wildcards</string>
-    <string name="call_description_recording">Recording call…</string>
-    <string name="call_record_auto_whitelist_no_item">Add a number by touching the add + button</string>
-    <string name="call_record_auto_whitelist">User list</string>
-    <string name="call_record_auto_unknown_number">Unknown numbers</string>
-    <string name="auto_record_yellowpage">Directory</string>
-    <string name="call_record_auto_title">Record automatically</string>
-    <string name="call_record_auto_summary">All recorded calls will be saved to the folder MIUI/sound_recorder/call_rec</string>
-    <string name="call_record_auto_scenario_title">Auto-record settings</string>
-    <string name="call_record_whitelist_custom">Custom list</string>
-    <string name="call_record_auto_whitelist_summary_for_one">1 number</string>
-    <string name="call_record_auto_whitelist_summary">%d numbers</string>
-    <string name="call_recording_notification_title">Call recording</string>
-    <string name="call_recording_notification_title_error">Call recording failed</string>
-    <string name="call_recording_setting">Record calls</string>
-    <string name="call_recording_notification_summary">Show notification in status bar when call has been recorded</string>
-    <string name="call_recording_notification_message_low_storage">Recording has stopped: Not enough space.</string>
-    <string name="call_recording_notification_message">Touch to view %s.</string>
-    <string name="call_recording_notification_message_sd_unmounted">Recording has stopped: SD card is unmounted.</string>
-    <string name="call_record_add_numbers">Add numbers</string>
-    <string name="call_remove_exception_numbers_confirm">%d numbers will be deleted.</string>
-    <string name="call_record_auto_always">All numbers</string>
-    <string name="autoip">Auto IP dialing</string>
-    <string name="autoip_prefix">IP prefix</string>
-    <string name="autoip_prefix_summary">"Carrier's IP prefix: %s"</string>
-    <string name="autoip_autoip_current_areacode_summary">Current area code: %s</string>
-    <string name="autoip_setting">Automatic IP settings</string>
-    <string name="autoip_summary">Add an IP prefix to a foreign number</string>
-    <string name="autoip_current_areacode">Current area code</string>
-    <string name="autoip_current_areacode_summary">Area code of your current location</string>
-    <string name="autoip_support_local_numbers">Always use IP prefix</string>
-    <string name="autoip_add_zero_prefix">Add 0 prefix for mobile</string>
-    <string name="autoip_exception">"Numbers that don't need IP prefix"</string>
-    <string name="autoip_exception_summary">%d total</string>
-    <string name="autoip_exception_summary_more">,… %d total</string>
-    <string name="autoip_no_exceptions">"Add numbers that don't require an IP prefix"</string>
-    <string name="autoip_areacode_required">Area code is required</string>
+    <string name="telocation_number_type_mob">Rete mobile</string>
+    <string name="telocation_number_type_tel">Rete fissa</string>
+    <string name="telocation_countrycode_alert_message">Inserisci il numero di telefono senza prefisso internazionale</string>
+    <string name="telocation_confim_delete_title">Cancellare questo messaggio?</string>
+    <string name="telocation_error_message_number">%s supporta solo numeri</string>
+    <string name="telocation_jituan_error_message_number">%s supporta solo numeri e caratteri jolly</string>
+    <string name="call_description_recording">Registrazione chiamata…</string>
+    <string name="call_record_auto_whitelist_no_item">Aggiungi un numero toccando il pulsante +</string>
+    <string name="call_record_auto_whitelist">Lista utente</string>
+    <string name="call_record_auto_unknown_number">Numeri sconosciuti</string>
+    <string name="auto_record_yellowpage">Cartella</string>
+    <string name="call_record_auto_title">Registra automaticamente</string>
+    <string name="call_record_auto_summary">Tutte le chiamate registrate verranno salvate nella cartella MIUI/sound_recorder/call_rec</string>
+    <string name="call_record_auto_scenario_title">Impostazione registrazione automatica</string>
+    <string name="call_record_whitelist_custom">Lista personalizzata</string>
+    <string name="call_record_auto_whitelist_summary_for_one">1 numero</string>
+    <string name="call_record_auto_whitelist_summary">%d numeri</string>
+    <string name="call_recording_notification_title">Registrazione chiamata</string>
+    <string name="call_recording_notification_title_error">Registrazione chiamata fallita</string>
+    <string name="call_recording_setting">Registrazione chiamate</string>
+    <string name="call_recording_notification_summary">Mostra una notifica nella barra di stato quando una chiamata è stata registrata</string>
+    <string name="call_recording_notification_message_low_storage">Registrazione interrotta: spazio insufficiente.</string>
+    <string name="call_recording_notification_message">Tocca per visualizzare %s.</string>
+    <string name="call_recording_notification_message_sd_unmounted">Registrazione interrotta: scheda SD rimossa.</string>
+    <string name="call_record_add_numbers">Aggiungi numeri</string>
+    <string name="call_remove_exception_numbers_confirm">%d numeri saranno cancellati.</string>
+    <string name="call_record_auto_always">Tutti i numero</string>
+    <string name="autoip">Composizione IP automatica</string>
+    <string name="autoip_prefix">Prefisso IP</string>
+    <string name="autoip_prefix_summary">"Prefisso IP dell'operatore: %s"</string>
+    <string name="autoip_autoip_current_areacode_summary">Codice area attuale: %s</string>
+    <string name="autoip_setting">Impostazioni IP automatico</string>
+    <string name="autoip_summary">Aggiungi un prefisso IP a un numero straniero</string>
+    <string name="autoip_current_areacode">Codice area attuale</string>
+    <string name="autoip_current_areacode_summary">Codice area della tua località attuale</string>
+    <string name="autoip_support_local_numbers">Usa sempre prefisso IP</string>
+    <string name="autoip_add_zero_prefix">Aggiungi il prefisso 0 ai numeri di cellulare</string>
+    <string name="autoip_exception">Numeri che non richiedo un prefisso IP</string>
+    <string name="autoip_exception_summary">%d totali</string>
+    <string name="autoip_exception_summary_more">,… %d totali</string>
+    <string name="autoip_no_exceptions">Aggiungi numeri che non richiedono un prefisso IP</string>
+    <string name="autoip_areacode_required">Codice area richiesto</string>
     <string name="autoip_areacode_required_accept">OK</string>
-    <string name="emergency_call_area_code_edit_dialog_hint">Enter area code</string>
-    <string name="autoip_areacode_required_for_emergency_number">Local area code required for emergency calls</string>
-    <string name="emergency_call_area_code_edit_dialog_button">Call</string>
+    <string name="emergency_call_area_code_edit_dialog_hint">Imposta prefisso area</string>
+    <string name="autoip_areacode_required_for_emergency_number">Il prefisso dell'area locale è necessario per eseguire chiamate di emergenza</string>
+    <string name="emergency_call_area_code_edit_dialog_button">Chiama</string>
     <string name="dial_related_setting_catory">Componi</string>
     <string name="t9_indexing_method_title">T9 search input</string>
     <string name="t9_indexing_method_pinyin">Pinyin</string>
