--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -494,109 +494,109 @@ Try again or call customer service for more options."</string>
     <string name="sip_edit_title">SIP account details</string>
     <string name="sip_edit_new_title">SIP account details</string>
     <string name="domain_address_title">Server</string>
-    <string name="username_title">Username</string>
+    <string name="username_title">Nome utente</string>
     <string name="password_title">Password</string>
-    <string name="display_name_title">Display name</string>
-    <string name="proxy_address_title">Outbound proxy address</string>
-    <string name="port_title">Port number</string>
-    <string name="transport_title">Transport type</string>
-    <string name="send_keepalive_title">Send keep-alive</string>
-    <string name="set_primary_title">Set as primary account</string>
-    <string name="set_primary_summary">Used for outbound calls</string>
-    <string name="advanced_settings">Optional settings</string>
-    <string name="auth_username_title">Authentication username</string>
-    <string name="auth_username_summary">Username used for authentication</string>
-    <string name="default_preference_summary">&lt;Not set></string>
-    <string name="display_name_summary">&lt;Same as username></string>
-    <string name="optional_summary">&lt;Optional></string>
+    <string name="display_name_title">Nome visualizzato</string>
+    <string name="proxy_address_title">"Indirizzo proxy verso l'esterno"</string>
+    <string name="port_title">Numero porta</string>
+    <string name="transport_title">Tipom di trasporto</string>
+    <string name="send_keepalive_title">Invia keep-alive</string>
+    <string name="set_primary_title">Imposta come account principale</string>
+    <string name="set_primary_summary">Usato per le chiamate in uscita</string>
+    <string name="advanced_settings">Impostazioni opzionali</string>
+    <string name="auth_username_title">Nome utente autenticazione</string>
+    <string name="auth_username_summary">"Nome utente usato per l'autenticazione"</string>
+    <string name="default_preference_summary">&lt;Non impostato></string>
+    <string name="display_name_summary">&lt;Come il nome utente></string>
+    <string name="optional_summary">&lt;Opzionale></string>
     <string name="default_port">5060</string>
     <string name="default_transport">UDP</string>
-    <string name="advanced_settings_show">▷ Touch to show all</string>
-    <string name="advanced_settings_hide">▽ Touch to hide all</string>
-    <string name="empty_alert">"%s is required and can't be left blank."</string>
-    <string name="not_a_valid_port">Port number should be within 1000 and 65534.</string>
-    <string name="no_internet_available_title">No Internet connection</string>
-    <string name="no_wifi_available_title">No WLAN connection</string>
-    <string name="no_internet_available">To place an Internet call, check your Internet connection first.</string>
-    <string name="no_wifi_available">You need to be connected to a WLAN network for Internet calls (use the Wireless &amp; Network settings).</string>
-    <string name="no_voip">Internet calling not supported</string>
-    <string name="no_volte">Unable to make IMS call</string>
-    <string name="no_vt_allowed">To place a video call, turn off the TTY mode</string>
-    <string name="sip_system_decide">Automatic</string>
-    <string name="sip_always_send_keepalive">Always send</string>
+    <string name="advanced_settings_show">▷ Tocca per vedere tutto</string>
+    <string name="advanced_settings_hide">▽ Tocca per nascondere tutto</string>
+    <string name="empty_alert">"%s è richiesto e non può essere lasciato in bianco."</string>
+    <string name="not_a_valid_port">Il numero della porta dovrebbe essere tra 1000 e 65534.</string>
+    <string name="no_internet_available_title">Nessuna connessione ad internet</string>
+    <string name="no_wifi_available_title">Nessuna connessione Wi-Fi</string>
+    <string name="no_internet_available">Per eseguire una chiamata via internet, verifica prima la tua connessione internet.</string>
+    <string name="no_wifi_available">"E' necessario che tu sia connesso ad una rete Wi-Fi per eseguire chiamate via internet (usa le Impostazioni Wi-Fi e rete)."</string>
+    <string name="no_voip">Chiamate via internet non supportate</string>
+    <string name="no_volte">Impossibile eseguire una chiamata IMS</string>
+    <string name="no_vt_allowed">Per eseguire una videochiamata, disattivare la modalità TTY</string>
+    <string name="sip_system_decide">Automatico</string>
+    <string name="sip_always_send_keepalive">Chiedi sempre</string>
     <string name="sip_always">SIP_ALWAYS</string>
     <string name="sip_address_only">SIP_ADDRESS_ONLY</string>
     <string name="sip_ask_me_each_time">SIP_ASK_ME_EACH_TIME</string>
-    <string name="domain_address">SipDomain</string>
-    <string name="username">UserName</string>
+    <string name="domain_address">Dominio SIP</string>
+    <string name="username">Nome utente</string>
     <string name="password">Password</string>
-    <string name="display_name">DisplayName</string>
-    <string name="proxy_address">ProxyAddress</string>
-    <string name="port">Port</string>
-    <string name="transport">Protocol</string>
-    <string name="send_keepalive">SendKeepAlive</string>
-    <string name="set_primary">SetPrimary</string>
+    <string name="display_name">Nome visualizzato</string>
+    <string name="proxy_address">Indirizzo proxy</string>
+    <string name="port">Porta</string>
+    <string name="transport">Protocollo</string>
+    <string name="send_keepalive">Invia KeepAlive</string>
+    <string name="set_primary">Imposta come primario</string>
     <string name="advanced_settings_container">advanced settings container</string>
     <string name="auth_username">AuthUserName</string>
-    <string name="ims_edit_title">IMS account details</string>
-    <string name="ims_accounts_title">IMS Account</string>
+    <string name="ims_edit_title">Dettagli account IMS</string>
+    <string name="ims_accounts_title">Account IMS</string>
     <string name="call_type">CallType</string>
     <string name="mo_call_type_title">MO Call Type</string>
-    <string name="ims_service_capability">Enable/Disable Service Capability</string>
+    <string name="ims_service_capability">Attiva/Disattiva funzionalità servizio</string>
     <string name="default_call_type">CSVoice</string>
     <string name="ims_call_type_control">ImsCallTypeCapabilityControl</string>
-    <string name="ims_service_capability_title">Enable/Disable IMS Service Capability</string>
-    <string name="ims_menu_save">Save</string>
-    <string name="ims_menu_discard">Discard</string>
-    <string name="remove_ims_account">Remove account</string>
-    <string name="not_voice_capable">Voice calling not supported</string>
-    <string name="respond_via_sms_canned_response_1">"Can't talk now. Call me later?"</string>
-    <string name="respond_via_sms_canned_response_2">"I'll call you right back."</string>
-    <string name="respond_via_sms_canned_response_3">"I'll call you later."</string>
-    <string name="respond_via_sms_canned_response_4">"Can't talk now. What's up?"</string>
-    <string name="respond_via_sms_cannot_empty">Reject messages can not be empty</string>
-    <string name="respond_via_sms_setting_title">Quick responses</string>
-    <string name="respond_via_sms_setting_summary">Edit pre-written text responses</string>
-    <string name="respond_via_sms_edittext_dialog_title">Quick response</string>
-    <string name="respond_via_sms_menu_reset_default_activity">Restore defaults</string>
-    <string name="respond_via_sms_confirmation_format">Message sent to %s.</string>
-    <string name="description_image_button_one">one</string>
-    <string name="description_image_button_two">two</string>
-    <string name="description_image_button_three">three</string>
-    <string name="description_image_button_four">four</string>
-    <string name="description_image_button_five">five</string>
-    <string name="description_image_button_six">six</string>
-    <string name="description_image_button_seven">seven</string>
-    <string name="description_image_button_eight">eight</string>
-    <string name="description_image_button_nine">nine</string>
-    <string name="description_image_button_star">star</string>
+    <string name="ims_service_capability_title">Attiva/Disabilita funzionalità servizio IMS</string>
+    <string name="ims_menu_save">Salva</string>
+    <string name="ims_menu_discard">Ignora</string>
+    <string name="remove_ims_account">Rimuovi account</string>
+    <string name="not_voice_capable">Chiamate vocali non supportate</string>
+    <string name="respond_via_sms_canned_response_1">"Ora non posso parlare. Puoi richiamare più tardi?"</string>
+    <string name="respond_via_sms_canned_response_2">"Richiamo io al più presto"</string>
+    <string name="respond_via_sms_canned_response_3">"Richiamo io più tardi."</string>
+    <string name="respond_via_sms_canned_response_4">"Ora non posso parlare. Che succede?"</string>
+    <string name="respond_via_sms_cannot_empty">Il messaggio di rifiuto non può essere vuoto</string>
+    <string name="respond_via_sms_setting_title">Risposte rapide</string>
+    <string name="respond_via_sms_setting_summary">Modifica SMS di risposta precompilati</string>
+    <string name="respond_via_sms_edittext_dialog_title">Risposta rapida</string>
+    <string name="respond_via_sms_menu_reset_default_activity">Ripristina predefiniti</string>
+    <string name="respond_via_sms_confirmation_format">Messaggio inviato a %s.</string>
+    <string name="description_image_button_one">uno</string>
+    <string name="description_image_button_two">due</string>
+    <string name="description_image_button_three">tre</string>
+    <string name="description_image_button_four">quattro</string>
+    <string name="description_image_button_five">cinque</string>
+    <string name="description_image_button_six">sei</string>
+    <string name="description_image_button_seven">sette</string>
+    <string name="description_image_button_eight">otto</string>
+    <string name="description_image_button_nine">nove</string>
+    <string name="description_image_button_star">asterisco</string>
     <string name="description_image_button_zero">zero</string>
-    <string name="description_image_button_pound">pound</string>
-    <string name="description_dial_button">dial</string>
-    <string name="description_delete_button">backspace</string>
-    <string name="ringtone_title">Phone ringtone</string>
-    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
-    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
-    <string name="dial_pad_autocomplete">Dial pad autocomplete</string>
-    <string name="preference_category_ringtone">Ringtone &amp; Vibrate</string>
-    <string name="set_subscription">Select subscriptions</string>
-    <string name="place_a_call1">Subscription 1</string>
-    <string name="place_a_call2">Subscription 2</string>
-    <string name="place_a_call3">Subscription 3</string>
-    <string name="cancel_call">Cancel</string>
-    <string name="sip_add_account_tip_text">To use internet calling, add a SIP account</string>
-    <string name="clir_choices_network_default">Network default</string>
-    <string name="clir_choices_hide_number">Hide number</string>
-    <string name="clir_choices_show_number">Show number</string>
+    <string name="description_image_button_pound">punto</string>
+    <string name="description_dial_button">componi</string>
+    <string name="description_delete_button">cancella</string>
+    <string name="ringtone_title">Suoneria telefono</string>
+    <string name="vibrate_on_ring_title">Vibra quando suona</string>
+    <string name="dtmf_tone_enable_title">Tono tastierino chiamata</string>
+    <string name="dial_pad_autocomplete">Automapletamente tastierino chiamata</string>
+    <string name="preference_category_ringtone">Suoneria e vibrazione</string>
+    <string name="set_subscription">Seleziona sottoscrizione</string>
+    <string name="place_a_call1">Sottoscrizione 1</string>
+    <string name="place_a_call2">Sottoscrizione 2</string>
+    <string name="place_a_call3">Sottoscrizione 3</string>
+    <string name="cancel_call">Annulla</string>
+    <string name="sip_add_account_tip_text">Per usare le chiamate internet, aggiungere un account SIP</string>
+    <string name="clir_choices_network_default">Predefinito dalla rete</string>
+    <string name="clir_choices_hide_number">Nascondi numero</string>
+    <string name="clir_choices_show_number">Mostra numero</string>
     <string name="tty_mode_entries_full">TTY Full</string>
     <string name="tty_mode_entries_hco">TTY HCO</string>
     <string name="tty_mode_entries_off">TTY Off</string>
     <string name="tty_mode_entries_vco">TTY VCO</string>
-    <string name="dtmf_tone_entries_normal">Normal</string>
-    <string name="dtmf_tone_entries_long">Long</string>
-    <string name="contactScreen">Add/Edit SIM Contact</string>
-    <string name="exportContactScreen">Export phone contacts to sim</string>
-    <string name="addSimEntries">Add SIM Contact</string>
+    <string name="dtmf_tone_entries_normal">Normale</string>
+    <string name="dtmf_tone_entries_long">Lungo</string>
+    <string name="contactScreen">Aggiungi/Modifica contatti sulla SIM</string>
+    <string name="exportContactScreen">Esporta contatti dal telefono alla SIM</string>
+    <string name="addSimEntries">Aggiungi contatto SIM</string>
     <string name="deleteAllSimEntries">Cancella TUTTI i contatti dalla SIM</string>
     <string name="deleteSimContacts">Cancellazione contatti dalla SIM</string>
     <string name="editContact">Modifica</string>
