--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -393,106 +393,106 @@ There are %d remaining attempts."</string>
     <string name="dtmf_tones_title">DTMF tones</string>
     <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
     <string name="xdivert_title">X-Divert</string>
-    <string name="xdivert_summary">CFNRc Settings</string>
-    <string name="phone_numbers">Enter Phone Numbers</string>
-    <string name="sub1LineNumber">Sub1 Number :</string>
-    <string name="sub2LineNumber">Sub2 Number :</string>
-    <string name="proceed">Proceed</string>
-    <string name="xdivert_button">X-Divert Setting</string>
-    <string name="xdivert_setting">X-Divert Setting</string>
-    <string name="sum_xdivert_enabled">X-Divert Enabled</string>
-    <string name="sum_xdivert_disabled">X-Divert Disabled</string>
-    <string name="network_message">Network message</string>
-    <string name="managed_roaming_title">Managed Roaming</string>
-    <string name="managed_roaming_title_sub1">Managed Roaming (SUB1)</string>
-    <string name="managed_roaming_title_sub2">Managed Roaming (SUB2)</string>
-    <string name="managed_roaming_title_sub3">Managed Roaming (SUB3)</string>
-    <string name="managed_roaming_dialog_content">Network with Limited Service found. Do you want to initiate a Network Search?</string>
-    <string name="managed_roaming_dialog_ok_button">Yes</string>
+    <string name="xdivert_summary">Impostazioni CFNRc</string>
+    <string name="phone_numbers">Inserisci i numeri di telefono</string>
+    <string name="sub1LineNumber">Numero sottoscr. 1 :</string>
+    <string name="sub2LineNumber">Numero sottoscr. 2 :</string>
+    <string name="proceed">Procedi</string>
+    <string name="xdivert_button">Impostazione X-Divert</string>
+    <string name="xdivert_setting">Impostazione X-Divert</string>
+    <string name="sum_xdivert_enabled">X-Divert attivato</string>
+    <string name="sum_xdivert_disabled">X-Divert disattivato</string>
+    <string name="network_message">Messaggio di rete</string>
+    <string name="managed_roaming_title">Roaming gestito</string>
+    <string name="managed_roaming_title_sub1">Roaming gestito (Sottoscr.1)</string>
+    <string name="managed_roaming_title_sub2">Roaming gestito (Sottoscr.2)</string>
+    <string name="managed_roaming_title_sub3">Roaming gestito (Sottoscr.3)</string>
+    <string name="managed_roaming_dialog_content">Rilevata rete con servizio limitato. Desideri eseguire una ricerca reti?</string>
+    <string name="managed_roaming_dialog_ok_button">Si</string>
     <string name="managed_roaming_dialog_cancel_button">No</string>
-    <string name="ota_title_activate">Activate your phone</string>
-    <string name="ota_touch_activate">"A special call needs to be made to activate your phone service. 
+    <string name="ota_title_activate">Attiva il tuo telefono</string>
+    <string name="ota_touch_activate">"E' necessario effettuare una speciale chiamata per attivare il tuo servizio telefonico. 
 
-After pressing “Activate”, listen to the instructions provided to activate your phone."</string>
-    <string name="ota_hfa_activation_title">Activating…</string>
-    <string name="ota_hfa_activation_dialog_message">"The phone is activating your mobile data service.
+Dopo aver premuto “Attiva”, ascolta le istruzioni fornite per attivare il tuo telefono."</string>
+    <string name="ota_hfa_activation_title">Attivazione…</string>
+    <string name="ota_hfa_activation_dialog_message">"Il telefono sta attivando il tuo servizio dati mobile.
 
-This can take up to 5 minutes."</string>
-    <string name="ota_skip_activation_dialog_title">Skip activation?</string>
-    <string name="ota_skip_activation_dialog_message">"If you skip activation, you can't place calls or connect to mobile data networks (though you can connect to WLAN networks). Until you activate your phone, you are asked to activate it each time you turn it on."</string>
-    <string name="ota_skip_activation_dialog_skip_label">Skip</string>
-    <string name="ota_activate">Activate</string>
-    <string name="ota_title_activate_success">Phone is activated.</string>
-    <string name="ota_title_problem_with_activation">Problem with activation</string>
-    <string name="ota_listen">Follow the spoken instructions until you hear that activation is complete.</string>
-    <string name="ota_speaker">Speaker</string>
-    <string name="ota_progress">Wait while your phone is being programmed.</string>
-    <string name="ota_failure">Programming unsuccessful</string>
-    <string name="ota_successful">Your phone is now activated. It may take up to 15 minutes for service to start.</string>
-    <string name="ota_unsuccessful">"Your phone didn't activate. 
-You may need to find an area with better coverage (near a window, or outside). 
+Potrebbero essere necessari fino a 5 minuti."</string>
+    <string name="ota_skip_activation_dialog_title">Saltare l'attivazione?</string>
+    <string name="ota_skip_activation_dialog_message">"Se salti l'attivazione, non potrai effettuare chiamate o connetterti alla rete dati mobile (ma potrai connetterti via Wi-Fi). Finché non attivi il tuo telefono, ti verrà richiesto di attivarlo ogni volta che lo accendi."</string>
+    <string name="ota_skip_activation_dialog_skip_label">Salta</string>
+    <string name="ota_activate">Attivato</string>
+    <string name="ota_title_activate_success">Il telefono è attivato.</string>
+    <string name="ota_title_problem_with_activation">"Problema con l'attivazione"</string>
+    <string name="ota_listen">"Segui le istruzioni vocali finché non senti che l'attivazione è stata completata."</string>
+    <string name="ota_speaker">Altoparlante</string>
+    <string name="ota_progress">Attendi mentre il tuo telefono viene programmato.</string>
+    <string name="ota_failure">Programmazione fallita</string>
+    <string name="ota_successful">Ora il tuo telefono è attivato. Potrebbero essere necessari fino a 15 minuti perchè il servizio si avvii.</string>
+    <string name="ota_unsuccessful">"Il tuo telefono non è stato attivato. 
+Dovresti trovare una zona dove c'è migliore copertura (vicino una finestra, o all'esterno). 
 
-Try again or call customer service for more options."</string>
+Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="ota_spc_failure">EXCESS SPC FAILURES</string>
-    <string name="ota_call_end">Back</string>
-    <string name="ota_try_again">Try again</string>
-    <string name="ota_next">Next</string>
+    <string name="ota_call_end">Indietro</string>
+    <string name="ota_try_again">Riprova</string>
+    <string name="ota_next">Avanti</string>
     <string name="ecm_exit_dialog">EcmExitDialog</string>
-    <string name="phone_entered_ecm_text">Entered Emergency Callback Mode</string>
-    <string name="phone_in_ecm_notification_title">Emergency Callback Mode</string>
-    <string name="phone_in_ecm_call_notification_text">Data connection disabled</string>
-    <string name="alert_dialog_in_ecm_call">"The selected action isn't available while in an emergency call."</string>
-    <string name="progress_dialog_exiting_ecm">Exiting Emergency Callback mode</string>
-    <string name="alert_dialog_yes">Yes</string>
+    <string name="phone_entered_ecm_text">Modalità Richiamata di emergenza attivata</string>
+    <string name="phone_in_ecm_notification_title">Modalità Richiamata di emergenza</string>
+    <string name="phone_in_ecm_call_notification_text">Connessione dati disattivata</string>
+    <string name="alert_dialog_in_ecm_call">"L'azione selezionata non è disponibile durante una chiamata di emergenza."</string>
+    <string name="progress_dialog_exiting_ecm">Uscita dalla modalità di richiamata di emergenza</string>
+    <string name="alert_dialog_yes">Si</string>
     <string name="alert_dialog_no">No</string>
     <string name="alert_dialog_dismiss">Dismiss</string>
-    <string name="other_settings">Other call settings</string>
-    <string name="selectContact">select contact</string>
-    <string name="sip_settings">Internet call settings</string>
-    <string name="sip_accounts">Internet calling (SIP) accounts</string>
-    <string name="sip_accounts_title">SIP Accounts</string>
-    <string name="sip_receive_calls">Receive incoming calls</string>
-    <string name="sip_receive_calls_summary">Reduces battery life</string>
-    <string name="sip_call_options_title">Use Internet calling</string>
-    <string name="sip_call_options_wifi_only_title">Use Internet calling (WLAN only)</string>
-    <string name="sip_call_options_entry_1">For all calls when data network is available</string>
-    <string name="sip_call_options_entry_2">Only for Internet calls</string>
-    <string name="sip_call_options_entry_3">Ask for each call</string>
-    <string name="sip_call_options_wifi_only_entry_1">For all calls</string>
-    <string name="pick_outgoing_call_phone_type">Place call</string>
-    <string name="pick_outgoing_sip_phone">Use Internet calling account:</string>
-    <string name="remember_my_choice">Always use to place Internet calls</string>
-    <string name="reset_my_choice_hint">You can change which Internet calling account to use by default from the Phone > Settings > Internet call settings > Accounts screen.</string>
-    <string name="pstn_phone">Cell phone call</string>
-    <string name="internet_phone">Internet call</string>
-    <string name="no_sip_account_found_title">No Internet calling account</string>
-    <string name="no_sip_account_found">There are no Internet calling accounts on this phone. Do you want to add one now?</string>
-    <string name="sip_menu_add">Add</string>
-    <string name="add_sip_account">Add account</string>
-    <string name="remove_sip_account">Remove account</string>
-    <string name="sip_account_list">SIP accounts</string>
-    <string name="saving_account">Saving the account…</string>
-    <string name="removing_account">Removing the account…</string>
-    <string name="sip_menu_save">Save</string>
-    <string name="sip_menu_discard">Discard</string>
-    <string name="alert_dialog_close">Close the profile</string>
+    <string name="other_settings">Altre impostazioni di chiamata</string>
+    <string name="selectContact">Seleziona contatto</string>
+    <string name="sip_settings">Impostazioni chiamate via internet</string>
+    <string name="sip_accounts">Account chiamate via internet (SIP)</string>
+    <string name="sip_accounts_title">Account SIP</string>
+    <string name="sip_receive_calls">Ricezione chiamate entranti</string>
+    <string name="sip_receive_calls_summary">"Riduce la durata della batteria"</string>
+    <string name="sip_call_options_title">Usa per chiamate via internet</string>
+    <string name="sip_call_options_wifi_only_title">Usa per chiamate via internet (solo Wi-Fi)</string>
+    <string name="sip_call_options_entry_1">Per tutte le chiamate quando la rete dati è disponibile</string>
+    <string name="sip_call_options_entry_2">Solo per chiamate via internet</string>
+    <string name="sip_call_options_entry_3">Chiedi ad ogni chiamata</string>
+    <string name="sip_call_options_wifi_only_entry_1">Per tutte le chiamate</string>
+    <string name="pick_outgoing_call_phone_type">Effettua una chiamata</string>
+    <string name="pick_outgoing_sip_phone">Usa account per chiamate via internet:</string>
+    <string name="remember_my_choice">Usa sempre per effettuare chiamate via internet</string>
+    <string name="reset_my_choice_hint">Puoi modificare quale account usare come predefinito per chiamare via internet da Telefono -> Impostazioni -> Impostazioni chiamate via internet -> Schermata account.</string>
+    <string name="pstn_phone">Chiamate via telefono cellulare</string>
+    <string name="internet_phone">Chiamate via internet</string>
+    <string name="no_sip_account_found_title">Nessun account per chiamate via internet</string>
+    <string name="no_sip_account_found">Non ci sono account per le chiamate via internet su questo telefono. Desideri aggiungerne uno ora?</string>
+    <string name="sip_menu_add">Aggiungi</string>
+    <string name="add_sip_account">Aggiungi account</string>
+    <string name="remove_sip_account">Rimuovi account</string>
+    <string name="sip_account_list">Account SIP</string>
+    <string name="saving_account">"Salvataggio dell'account…"</string>
+    <string name="removing_account">"Rimozione dell'account…"</string>
+    <string name="sip_menu_save">Salva</string>
+    <string name="sip_menu_discard">Ignora</string>
+    <string name="alert_dialog_close">Chiudi il profilo</string>
     <string name="alert_dialog_ok">OK</string>
-    <string name="close_profile">Close</string>
-    <string name="primary_account_summary_with">Primary account. %s</string>
-    <string name="registration_status_checking_status">Checking status…</string>
-    <string name="registration_status_registering">Registering…</string>
-    <string name="registration_status_still_trying">Still trying…</string>
-    <string name="registration_status_not_receiving">Not receiving calls.</string>
-    <string name="registration_status_no_data">Account registration stopped because there is no Internet connection.</string>
-    <string name="registration_status_no_wifi_data">Account registration stopped because there is no WLAN connection.</string>
-    <string name="registration_status_not_running">Account registration unsuccessful.</string>
-    <string name="registration_status_done">Receiving calls.</string>
-    <string name="registration_status_failed_try_later">Account registration unsuccessful: (%s); will try later</string>
-    <string name="registration_status_invalid_credentials">Account registration unsuccessful: Incorrect username or password.</string>
-    <string name="registration_status_server_unreachable">Account registration unsuccessful: Check the server name.</string>
-    <string name="third_party_account_summary">This account is currently in use by the %s app.</string>
-    <string name="sip_edit_title">SIP account details</string>
-    <string name="sip_edit_new_title">SIP account details</string>
+    <string name="close_profile">Chiudi</string>
+    <string name="primary_account_summary_with">Account primario. %s</string>
+    <string name="registration_status_checking_status">Verifica dello stato…</string>
+    <string name="registration_status_registering">Registrazione…</string>
+    <string name="registration_status_still_trying">Tentativo ancora in corso…</string>
+    <string name="registration_status_not_receiving">Non è possibile ricevere chiamate.</string>
+    <string name="registration_status_no_data">Registrazione account interrotta per mancanza di connessione ad internet.</string>
+    <string name="registration_status_no_wifi_data">Registrazione account interrotta per mancanza di connessione Wi-Fi.</string>
+    <string name="registration_status_not_running">Registrazione account fallita.</string>
+    <string name="registration_status_done">Chiamate in entrata abilitate.</string>
+    <string name="registration_status_failed_try_later">Registrazione account fallita:: (%s); riprova più tardi</string>
+    <string name="registration_status_invalid_credentials">Registrazione account fallita:: nome utente o password errati.</string>
+    <string name="registration_status_server_unreachable">Registrazione account fallita: verifica il nome del server.</string>
+    <string name="third_party_account_summary">"Questo account è attualmente in uso da parte dell'app %s."</string>
+    <string name="sip_edit_title">Dettagli account SIP</string>
+    <string name="sip_edit_new_title">Dettagli account SIP</string>
     <string name="domain_address_title">Server</string>
     <string name="username_title">Nome utente</string>
     <string name="password_title">Password</string>
